src/App.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

*::selection {
  background-color: gray;
}

*::-moz-selection {
  background: gray;
}


* {
  -webkit-tap-highlight-color: transparent;
}

html {
  font-size: 62.5%;
  scroll-behavior: smooth;
}
:root{
  font-family: Whitney, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
  cursor:default;
}
.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}
.navbar{
  width: 100%;
  background-color: rgb(226, 215, 255);
  height: 80px;
  display: flex;
  align-items: center;
  justify-content:center;
  padding:0 20px;
}
.logo{
  width: 20%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content:flex-start;

}
.logo img{
  height: 100%;
}

.navbar ul{
  width: 80%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: flex-end;
  gap: 50px;
}
.tabs{
  list-style: none;
}
.tabs-link{
  font-size: 2rem;
  color: rgb(8, 8, 8);
  font-weight: 700;
  text-decoration: none;
  position: relative;
}
.tabs-link:hover{
  color: rgb(98, 0, 255);
}
.tabs-link::before{
  content: "";
  position: absolute;
  bottom: 0;
  width: 100%;
  height: 2px;
  background-color: rgb(98, 0, 255);
  transform: scaleX(0);
  transform-origin:left;
  transition-duration: .3s;
}
.tabs-link:hover::before{
  transform: scaleX(1);
  transform-origin:left;
  transition-duration: .3s;
}
.daddy-container{
  width: 100%;
  height: 90vh;
  display: flex;
  align-items: center;
  justify-content: center;
}
.main-container{
  display: flex;
  flex-direction: column;
  background-color: rgb(241, 236, 255);
  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.219);
  width: 350px;
  padding: 25px 20px;
  gap: 20px;
  align-items: center;
  justify-content: center;
  border-radius: 10px;
}
.heading{
  width: 100%;
  display: flex;
  align-items: flex-start

}
.heading article{
  font-size: 2rem;
  font-weight: 700;
  color: black;
}
.input-div{
  width: 100%;
  display: flex;
  gap: 10px;
}
.input{
  width: 80%;
  height: 30px;
}
.copy{
  width: 20%;
  height: 30px;
  border: none;
  background-color: rgb(98, 0, 255);
  border-radius: 0;
  color: white;
  cursor: pointer;
  transition-duration: .3s;
  border-radius: 30px;
}
.copy:hover{
  color:rgb(140, 68, 255);
  background-color: #ffffff;
  transition-duration: .3s;
}
.checkbox-container{
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 20px;
}
.checkbox-container div{
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
}
#length-label{
  width: 70%;
}
#length{
  width: 50px;
  height: 25px;
}
label{
  font-size: 1.5rem;
  font-weight: 500;
  cursor: pointer;
  width: 90%;
}
.generate-button{
  width: 100%;
  height: 35px;
  background-color: rgb(98, 0, 255);
  color: white;
  border: none;
  font-size: 1.5rem;
  font-weight: 400;
  border-radius: 0;
  cursor: pointer;
   transition-duration: .3s;
   border-radius: 30px;
}
.generate-button:hover{
  color:rgb(140, 68, 255);
  background-color: #ffffff;
  transition-duration: .3s;
}
.checkbox{
  cursor: pointer;
  accent-color: rgb(98, 0, 255);
}
.footer{
  width: 100%;
  height: fit-content;
  display: flex;
  align-items: center;
  justify-content: center;
  background-color:#cacaca;
  font-size: 4rem;
  font-weight: 600;
}
.footer img{
  height: 100%;
}
.about-section{
  width: 100%;
  height: 90vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 30px;
}
.about-us-description{
  width: 50%;
  font-size: 3rem;
  font-weight: 500;
}
.about-us-heading{
  font-size: 4rem;
  font-weight: 700;
  text-align: center;
}


/* responsive code below*/
@media screen and (max-width:1920px) {
  html {
      font-size: 60%;
  }
}

@media screen and (max-width:1200px) {
  html {
      font-size: 60%;
  }
}

@media screen and (max-width:998px) {
  html {
      font-size: 55%;
  }
}

@media screen and (max-width:768px) {
  html {
      font-size: 50%;
  }
  .logo{
    align-items: center;
    justify-content: flex-start;
  }
  .navbar ul{
    gap: 30px;
  }
}

@media screen and (max-width:500px) {
  html {
      font-size: 47%;  
  }
  .logo img{
    height: 60%;
  }
  .about-us-description{
    width: 70%;
  }
  .footer-logo{
    height: 60%;
  }
}
@media screen and (max-width:430px) {
  html {
      font-size: 45%;
  }
}

@media screen and (max-width:375px) {
  html {
      font-size: 40%;
  }
}
@media screen and (max-width:300px) {
  html {
      font-size: 40%;
  }
}

/* responsive code above */

